--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Mark Clayton
 description: Penetration Testing / Development / Research / Whatever else comes to mind
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars0.githubusercontent.com/u/7879795?v=3&s=460
 
 #
 # Flags below are optional
