--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ description: Penetration Testing / Development / Research / Whatever else comes 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/7879795?v=3&s=460
 
+# Build settings
+theme: cayman
+
 #
 # Flags below are optional
 #
@@ -18,14 +21,14 @@ avatar: https://avatars0.githubusercontent.com/u/7879795?v=3&s=460
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: 
+  email: mark.clayton93@gmail.com
   facebook:
   flickr:
   github: markclayton
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/mark-clayton-b9208744
   pinterest:
-  rss: # just type anything here for a working RSS icon
+  rss: working # just type anything here for a working RSS icon
   twitter: markc0711
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
@@ -41,7 +44,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://markclayton.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
