--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ description: Penetration Testing / Development / Research / Whatever else comes 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/7879795?v=3&s=460
 
-# Build settings
+# Trying to get a theme working
 theme: jekyll-theme-cayman
 title: Mark Clayton
 description: Security / Pentesting / Development / Random Thoughts
