--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ description: Penetration Testing / Development / Research / Whatever else comes 
 avatar: https://avatars0.githubusercontent.com/u/7879795?v=3&s=460
 
 # Trying to get a theme working
-theme: jekyll-theme-cayman
+theme: jekyll-theme-caymann
 title: Mark Clayton
 description: Security / Pentesting / Development / Random Thoughts
 
